--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,18 @@
 ﻿{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "Cloudinary": {
+        "CloudName": "dwupjj3ri",
+        "ApiKey": "735919434855938",
+        "ApiSecret": "ZHkAm8-1clTOEBmDQothQpUmyt8"
+    },
+    "Firebase": {
+        "DatabaseUrl": "https://photogallerydb-196ef-default-rtdb.firebaseio.com/",
+        "CredentialPath": "firebase-adminsdk.json"
     }
-  },
-  "AllowedHosts": "*",
 }
