sữa lỗi like kh được

--- a/appsettings.json
+++ b/appsettings.json
@@ -14,6 +14,7 @@
   "Firebase": {
     "DatabaseUrl": "https://photogallerydb-196ef-default-rtdb.firebaseio.com/",
     "CredentialPath": "firebase-adminsdk.json",
-    "DatabaseSecret": "HgylkpY9BA0zLFPzyrfgo6BFNfKp4pjuv3zkeFVl"
+    "DatabaseSecret": "HgylkpY9BA0zLFPzyrfgo6BFNfKp4pjuv3zkeFVl",
+    "WebApiKey": "AIzaSyBSWP9dQaWSJ_yYyulNHebF3NQGBDgYrew"
   }
 }
