--- a/DoAnWebAPI/.gitignore
+++ b/DoAnWebAPI/.gitignore
@@ -16,8 +16,8 @@
 # Mono auto generated files
 mono_crash.*
 # Firebase credentials
-*.json
 appsettings.json
+firebase-adminsdk.json
 
 
 # Build results
