--- a/DoAnWebAPI/appsettings.json
+++ b/DoAnWebAPI/appsettings.json
@@ -8,11 +8,13 @@
   "AllowedHosts": "*",
   "Cloudinary": {
     "CloudName": "dwupjj3ri",
-    "ApiKey": "your-api-key",
-    "ApiSecret": "your-api-secret"
+    "ApiKey": "735919434855938",
+    "ApiSecret": "ZHkAm8-1clTOEBmDQothQpUmyt8"
   },
   "Firebase": {
     "DatabaseUrl": "https://photogallerydb-196ef-default-rtdb.firebaseio.com/",
-    "CredentialPath": "firebase-adminsdk.json"
+    "CredentialPath": "firebase-adminsdk.json",
+    "DatabaseSecret": "HgylkpY9BA0zLFPzyrfgo6BFNfKp4pjuv3zkeFVl",
+    "WebApiKey": "AIzaSyBSWP9dQaWSJ_yYyulNHebF3NQGBDgYrew"
   }
 }
