--- a/DoAnWebAPI/appsettings.json
+++ b/DoAnWebAPI/appsettings.json
@@ -12,6 +12,7 @@
     "ApiSecret": "ZHkAm8-1clTOEBmDQothQpUmyt8"
   },
   "Firebase": {
+    "project_id": "photogallerydb-196ef",
     "DatabaseUrl": "https://photogallerydb-196ef-default-rtdb.firebaseio.com/",
     "CredentialPath": "firebase-adminsdk.json",
     "DatabaseSecret": "HgylkpY9BA0zLFPzyrfgo6BFNfKp4pjuv3zkeFVl",
