--- a/DoAnWebAPI/DoAnWebAPI.csproj
+++ b/DoAnWebAPI/DoAnWebAPI.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\DoAnWebAPI_WebMVC\wwwroot\js\newFile.js" Link="newFile.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CloudinaryDotNet" Version="1.27.7" />
     <PackageReference Include="FirebaseAdmin" Version="3.4.0" />
     <PackageReference Include="FirebaseDatabase.net" Version="5.0.0" />
